; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/irix/local/extr_19347.c_main.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/irix/local/extr_19347.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OFFS = common dso_local global i32 0, align 4
@BUFSIZE = common dso_local global i32 0, align 4
@ADDRS = common dso_local global i32 0, align 4
@ALIGN = common dso_local global i32 0, align 4
@nop = common dso_local global i8* null, align 8
@asmcode = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [42 x i8] c"bufsize too small, code is %d bytes long\0A\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"Can't malloc\0A\00", align 1
@jump = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [12 x i8] c"address=%p\0A\00", align 1
@ALIGN2 = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [11 x i8] c"buflen=%d\0A\00", align 1
@stdout = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca [8 x i8], align 1
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %15 = load i32, i32* @OFFS, align 4
  store i32 %15, i32* %9, align 4
  %16 = load i32, i32* @BUFSIZE, align 4
  store i32 %16, i32* %10, align 4
  %17 = load i32, i32* @ADDRS, align 4
  store i32 %17, i32* %11, align 4
  %18 = load i32, i32* @ALIGN, align 4
  store i32 %18, i32* %12, align 4
  %19 = load i8*, i8** @nop, align 8
  %20 = call i32 @strlen(i8* %19)
  store i32 %20, i32* %14, align 4
  %21 = load i32, i32* %4, align 4
  %22 = icmp sgt i32 %21, 1
  br i1 %22, label %23, label %28

23:                                               ; preds = %2
  %24 = load i8**, i8*** %5, align 8
  %25 = getelementptr inbounds i8*, i8** %24, i64 1
  %26 = load i8*, i8** %25, align 8
  %27 = call i32 @atoi(i8* %26)
  store i32 %27, i32* %10, align 4
  br label %28

28:                                               ; preds = %23, %2
  %29 = load i32, i32* %4, align 4
  %30 = icmp sgt i32 %29, 2
  br i1 %30, label %31, label %36

31:                                               ; preds = %28
  %32 = load i8**, i8*** %5, align 8
  %33 = getelementptr inbounds i8*, i8** %32, i64 2
  %34 = load i8*, i8** %33, align 8
  %35 = call i32 @atoi(i8* %34)
  store i32 %35, i32* %9, align 4
  br label %36

36:                                               ; preds = %31, %28
  %37 = load i32, i32* %4, align 4
  %38 = icmp sgt i32 %37, 3
  br i1 %38, label %39, label %44

39:                                               ; preds = %36
  %40 = load i8**, i8*** %5, align 8
  %41 = getelementptr inbounds i8*, i8** %40, i64 3
  %42 = load i8*, i8** %41, align 8
  %43 = call i32 @atoi(i8* %42)
  store i32 %43, i32* %11, align 4
  br label %44

44:                                               ; preds = %39, %36
  %45 = load i32, i32* %4, align 4
  %46 = icmp sgt i32 %45, 4
  br i1 %46, label %47, label %52

47:                                               ; preds = %44
  %48 = load i8**, i8*** %5, align 8
  %49 = getelementptr inbounds i8*, i8** %48, i64 4
  %50 = load i8*, i8** %49, align 8
  %51 = call i32 @atoi(i8* %50)
  store i32 %51, i32* %12, align 4
  br label %52

52:                                               ; preds = %47, %44
  %53 = load i32, i32* %10, align 4
  %54 = load i8*, i8** @asmcode, align 8
  %55 = call i32 @strlen(i8* %54)
  %56 = icmp slt i32 %53, %55
  br i1 %56, label %57, label %62

57:                                               ; preds = %52
  %58 = load i8*, i8** @asmcode, align 8
  %59 = call i32 @strlen(i8* %58)
  %60 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i32 %59)
  %61 = call i32 @exit(i32 1) #3
  unreachable

62:                                               ; preds = %52
  %63 = load i32, i32* %10, align 4
  %64 = load i32, i32* @ADDRS, align 4
  %65 = shl i32 %64, 2
  %66 = add nsw i32 %63, %65
  %67 = load i32, i32* %14, align 4
  %68 = add nsw i32 %66, %67
  %69 = add nsw i32 %68, 1
  %70 = call i8* @malloc(i32 %69)
  store i8* %70, i8** %6, align 8
  %71 = icmp eq i8* %70, null
  br i1 %71, label %72, label %75

72:                                               ; preds = %62
  %73 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0))
  %74 = call i32 @exit(i32 1) #3
  unreachable

75:                                               ; preds = %62
  %76 = load i64, i64* @jump, align 8
  %77 = inttoptr i64 %76 to i64 (...)*
  %78 = call i64 (...) %77()
  %79 = load i32, i32* %9, align 4
  %80 = sext i32 %79 to i64
  %81 = add i64 %78, %80
  %82 = trunc i64 %81 to i32
  %83 = getelementptr inbounds [8 x i8], [8 x i8]* %8, i64 0, i64 0
  %84 = bitcast i8* %83 to i32*
  store i32 %82, i32* %84, align 1
  %85 = getelementptr inbounds [8 x i8], [8 x i8]* %8, i64 0, i64 0
  %86 = bitcast i8* %85 to i32*
  %87 = load i32, i32* %86, align 1
  %88 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), i32 %87)
  %89 = load i8*, i8** %6, align 8
  %90 = load i8*, i8** @nop, align 8
  %91 = call i32 @strcpy(i8* %89, i8* %90)
  %92 = load i8*, i8** %6, align 8
  %93 = load i32, i32* %14, align 4
  %94 = sext i32 %93 to i64
  %95 = getelementptr inbounds i8, i8* %92, i64 %94
  store i8* %95, i8** %7, align 8
  %96 = load i32, i32* %12, align 4
  %97 = load i8*, i8** %6, align 8
  %98 = sext i32 %96 to i64
  %99 = getelementptr inbounds i8, i8* %97, i64 %98
  store i8* %99, i8** %6, align 8
  store i32 0, i32* %13, align 4
  br label %100

100:                                              ; preds = %114, %75
  %101 = load i32, i32* %13, align 4
  %102 = load i32, i32* %10, align 4
  %103 = icmp slt i32 %101, %102
  br i1 %103, label %104, label %117

104:                                              ; preds = %100
  %105 = load i8*, i8** @nop, align 8
  %106 = load i32, i32* %13, align 4
  %107 = load i32, i32* %14, align 4
  %108 = srem i32 %106, %107
  %109 = sext i32 %108 to i64
  %110 = getelementptr inbounds i8, i8* %105, i64 %109
  %111 = load i8, i8* %110, align 1
  %112 = load i8*, i8** %7, align 8
  %113 = getelementptr inbounds i8, i8* %112, i32 1
  store i8* %113, i8** %7, align 8
  store i8 %111, i8* %112, align 1
  br label %114

114:                                              ; preds = %104
  %115 = load i32, i32* %13, align 4
  %116 = add nsw i32 %115, 1
  store i32 %116, i32* %13, align 4
  br label %100

117:                                              ; preds = %100
  %118 = load i8*, i8** %7, align 8
  %119 = load i8*, i8** @asmcode, align 8
  %120 = call i32 @strlen(i8* %119)
  %121 = sext i32 %120 to i64
  %122 = sub i64 0, %121
  %123 = getelementptr inbounds i8, i8* %118, i64 %122
  %124 = load i8*, i8** @asmcode, align 8
  %125 = load i8*, i8** @asmcode, align 8
  %126 = call i32 @strlen(i8* %125)
  %127 = call i32 @memcpy(i8* %123, i8* %124, i32 %126)
  store i32 0, i32* %13, align 4
  br label %128

128:                                              ; preds = %142, %117
  %129 = load i32, i32* %13, align 4
  %130 = load i32, i32* @ALIGN2, align 4
  %131 = icmp slt i32 %129, %130
  br i1 %131, label %132, label %145

132:                                              ; preds = %128
  %133 = load i8*, i8** @nop, align 8
  %134 = load i32, i32* %13, align 4
  %135 = load i32, i32* %14, align 4
  %136 = srem i32 %134, %135
  %137 = sext i32 %136 to i64
  %138 = getelementptr inbounds i8, i8* %133, i64 %137
  %139 = load i8, i8* %138, align 1
  %140 = load i8*, i8** %7, align 8
  %141 = getelementptr inbounds i8, i8* %140, i32 1
  store i8* %141, i8** %7, align 8
  store i8 %139, i8* %140, align 1
  br label %142

142:                                              ; preds = %132
  %143 = load i32, i32* %13, align 4
  %144 = add nsw i32 %143, 1
  store i32 %144, i32* %13, align 4
  br label %128

145:                                              ; preds = %128
  store i32 0, i32* %13, align 4
  br label %146

146:                                              ; preds = %159, %145
  %147 = load i32, i32* %13, align 4
  %148 = load i32, i32* %11, align 4
  %149 = shl i32 %148, 2
  %150 = icmp slt i32 %147, %149
  br i1 %150, label %151, label %162

151:                                              ; preds = %146
  %152 = load i32, i32* %13, align 4
  %153 = sext i32 %152 to i64
  %154 = urem i64 %153, 4
  %155 = getelementptr inbounds [8 x i8], [8 x i8]* %8, i64 0, i64 %154
  %156 = load i8, i8* %155, align 1
  %157 = load i8*, i8** %7, align 8
  %158 = getelementptr inbounds i8, i8* %157, i32 1
  store i8* %158, i8** %7, align 8
  store i8 %156, i8* %157, align 1
  br label %159

159:                                              ; preds = %151
  %160 = load i32, i32* %13, align 4
  %161 = add nsw i32 %160, 1
  store i32 %161, i32* %13, align 4
  br label %146

162:                                              ; preds = %146
  %163 = load i8*, i8** %7, align 8
  store i8 0, i8* %163, align 1
  %164 = load i8*, i8** %6, align 8
  %165 = call i32 @strlen(i8* %164)
  %166 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.3, i64 0, i64 0), i32 %165)
  %167 = load i32, i32* @stdout, align 4
  %168 = call i32 @fflush(i32 %167)
  %169 = load i8*, i8** %6, align 8
  %170 = call i32 @run(i8* %169)
  %171 = load i32, i32* %3, align 4
  ret i32 %171
}

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @atoi(i8*) #1

declare dso_local i32 @printf(i8*, ...) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i8* @malloc(i32) #1

declare dso_local i32 @strcpy(i8*, i8*) #1

declare dso_local i32 @memcpy(i8*, i8*, i32) #1

declare dso_local i32 @fflush(i32) #1

declare dso_local i32 @run(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
